# inclinometer_ADXL355

./: .gitignore  README.md  pyproject.toml
scripts/: host_stream.py  read_once.py
src/inclinometer/: adxl355.py  stream.py
src/inclinometer/host/: client.py  tilt.py
src/inclinometer/host/web/: __main__.py  app.py
src/inclinometer/host/web/static/: index.html
