[project]
name = "inclinometer"
version = "0.1.0"
description = "Inclinometer app using the Analog Devices ADXL355 over SPI on Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    # spidev is Linux-only; installs on Pi, skipped on macOS dev machine.
    "spidev>=3.6 ; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inclinometer"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
